...
                android:text="There are no articles regarding this category."
                android:textColor="@color/colorPrimaryDark"
                android:textSize="18sp"
                android:textStyle="italic" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/articlesTransfers"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="48dp"
                android:orientation="horizontal" />

            <TextView
...
