<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundLight"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.login.RegisterActivity">

    <TextView
        android:id="@+id/registerWelcomeText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:text="Welcome!"
        android:textColor="@color/colorText"
        android:textSize="36sp" />

    <EditText
        android:id="@+id/registerName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="Your name (optional)"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textCursorDrawable="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/registerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="Your e-mail"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorText"
        android:textCursorDrawable="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/registerLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="Your login"
        android:inputType="textPersonName"
        android:textColor="@color/colorText"
        android:textCursorDrawable="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/registerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="Your password"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textCursorDrawable="@color/colorPrimaryDark" />

    <EditText
        android:id="@+id/registerPasswordConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:ems="10"
        android:hint="Confirm your password"
        android:inputType="textPassword"
        android:textColor="@color/colorText"
        android:textCursorDrawable="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button"
            android:text="Register"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/registerCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_weight="1"
            android:background="@drawable/shape_button"
            android:text="Cancel"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>